# QpSolverCollection

./: .gitignore  CMakeLists.txt  README.md  _config.yml  package.xml
.github/workflows/: ci.yaml  package.yaml
cmake/: qp_solver_options.cmake.in
debian/: changelog  control  copyright  rules
doc/: CMakeLists.txt  Doxyfile.in
dockerfiles/: Dockerfile.windows  docker-compose.windows.yml
dockerfiles/install/: i_dep.sh
doxygen/: QpSolverCollection_8h.html  QpSolverCollection_8h__incl.dot  QpSolverCollection_8h__incl.map  QpSolverCollection_8h__incl.md5  QpSolverCollection_8h_source.html  QpSolverOptions_8h.html  QpSolverOptions_8h__dep__incl.dot  QpSolverOptions_8h__dep__incl.map  QpSolverOptions_8h__dep__incl.md5  QpSolverOptions_8h_source.html  QpSolver_8h.html  QpSolver_8h__incl.dot  QpSolver_8h__incl.md5  QpSolver_8h_source.html  README_8md.html  README_8md_source.html  _formulas.tex  annotated.html  classQpSolverCollection_1_1QpCoeff-members.html  classQpSolverCollection_1_1QpCoeff.html  classQpSolverCollection_1_1QpSolver-members.html  classQpSolverCollection_1_1QpSolver.html  classQpSolverCollection_1_1QpSolverHpipm-members.html  classQpSolverCollection_1_1QpSolverHpipm.html  classQpSolverCollection_1_1QpSolverHpipm__inherit__graph.map  classQpSolverCollection_1_1QpSolverHpipm__inherit__graph.md5  classQpSolverCollection_1_1QpSolverJrlqp-members.html  classQpSolverCollection_1_1QpSolverJrlqp.html  classQpSolverCollection_1_1QpSolverJrlqp__coll__graph.map  classQpSolverCollection_1_1QpSolverJrlqp__coll__graph.md5  classQpSolverCollection_1_1QpSolverJrlqp__inherit__graph.map  classQpSolverCollection_1_1QpSolverJrlqp__inherit__graph.md5  classQpSolverCollection_1_1QpSolverLssol-members.html  classQpSolverCollection_1_1QpSolverLssol.html  classQpSolverCollection_1_1QpSolverLssol__coll__graph.map  classQpSolverCollection_1_1QpSolverLssol__coll__graph.md5  classQpSolverCollection_1_1QpSolverLssol__inherit__graph.map  classQpSolverCollection_1_1QpSolverLssol__inherit__graph.md5  classQpSolverCollection_1_1QpSolverNasoq-members.html  classQpSolverCollection_1_1QpSolverNasoq.html  (+83 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+32 more)
include/qp_solver_collection/: QpSolver.h  QpSolverCollection.h  QpSolverOptions.h.in
src/: CMakeLists.txt  QpSolver.cpp  QpSolverCollection.cpp  QpSolverHpipm.cpp  QpSolverJrlqp.cpp  QpSolverLssol.cpp  QpSolverNasoq.cpp  QpSolverOsqp.cpp  QpSolverProxqp.cpp  QpSolverQld.cpp  QpSolverQpmad.cpp  QpSolverQpoases.cpp  QpSolverQuadprog.cpp
tests/: CMakeLists.txt  TestQpSolversEnabled.cpp  TestSampleQP.cpp
